[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/HUD_single_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Backgroud" type="ColorRect" parent="."]
margin_left = -2.37842
margin_right = 1021.62
margin_bottom = 600.0
color = Color( 0.00392157, 0.313726, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_single_player" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="InitialPositionPlayer" type="Position2D" parent="."]
position = Vector2( 104.615, 283.982 )

[node name="BulletTimer" type="Timer" parent="."]

[node name="InitialPositionBullet" type="Position2D" parent="."]
position = Vector2( 989.421, 480.44 )

[node name="SecondInitialPositionBullet" type="Position2D" parent="."]
position = Vector2( 120.584, 481.681 )

[node name="DeathPositionPlayer" type="Position2D" parent="."]
position = Vector2( -412.134, 505.481 )

[node name="InitialEnemyPosition" type="Position2D" parent="."]
position = Vector2( 648.732, 296.334 )

[node name="DeathLabelPosition" type="Position2D" parent="."]
position = Vector2( 481.5, 500 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="hp_changed" from="Player" to="." method="_on_Player_hp_changed"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
